--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -1,29 +1,29 @@
-@define-color rosewater #f5e0dc;
-@define-color flamingo #f2cdcd;
-@define-color pink #f5c2e7;
-@define-color mauve #cba6f7;
-@define-color red #f38ba8;
-@define-color maroon #eba0ac;
-@define-color peach #fab387;
-@define-color yellow #f9e2af;
-@define-color green #a6e3a1;
-@define-color teal #94e2d5;
-@define-color sky #89dceb;
-@define-color sapphire #74c7ec;
-@define-color blue #89b4fa;
-@define-color lavender #b4befe;
-@define-color text #cdd6f4;
-@define-color subtext1 #bac2de;
-@define-color subtext0 #a6adc8;
-@define-color overlay2 #9399b2;
-@define-color overlay1 #7f849c;
-@define-color overlay0 #6c7086;
-@define-color surface2 #585b70;
-@define-color surface1 #45475a;
-@define-color surface0 #313244;
-@define-color base #1e1e2e;
-@define-color mantle #181825;
-@define-color crust #11111b;
+@define-color rosewater rgba(245, 224, 220, 1);
+@define-color flamingo rgba(242, 205, 205, 1);
+@define-color pink rgba(245, 194, 231, 1);
+@define-color mauve rgba(203, 166, 247, 1);
+@define-color red rgba(243, 139, 168, 1);
+@define-color maroon rgba(235, 160, 172, 1);
+@define-color peach rgba(250, 179, 135, 1);
+@define-color yellow rgba(249, 226, 175, 1);
+@define-color green rgba(166, 227, 161, 1);
+@define-color teal rgba(148, 226, 213, 1);
+@define-color sky rgba(137, 220, 235, 1);
+@define-color sapphire rgba(116, 199, 236, 1);
+@define-color blue rgba(137, 180, 250, 1);
+@define-color lavender rgba(180, 190, 254, 1);
+@define-color text rgba(205, 214, 244, 1);
+@define-color subtext1 rgba(186, 194, 222, 1);
+@define-color subtext0 rgba(166, 173, 200, 1);
+@define-color overlay2 rgba(147, 153, 178, 1);
+@define-color overlay1 rgba(127, 132, 156, 1);
+@define-color overlay0 rgba(108, 112, 134, 1);
+@define-color surface2 rgba(88, 91, 112, 1);
+@define-color surface1 rgba(69, 71, 90, 1);
+@define-color surface0 rgba(49, 50, 68, 1);
+@define-color base rgba(30, 30, 46, 1);
+@define-color mantle rgba(24, 24, 37, 1);
+@define-color crust rgba(17, 17, 27, 1);
 
 * {
   border: 0;
@@ -49,32 +49,29 @@ window#waybar.hidden {
 
 #workspaces button {
   all: initial;
-  /* Remove GTK theme values (waybar #1351) */
   min-width: 0;
-  /* Fix weird spacing in materia (waybar #450) */
   box-shadow: inset 0 -3px transparent;
-  /* Use box-shadow instead of border so the text isn't offset */
   padding: 6px 18px;
   margin: 6px 3px;
   border-radius: 4px;
-  background-color: #313244;
-  color: #cdd6f4;
+  background-color: rgba(49, 50, 68, 1);
+  color: rgba(205, 214, 244, 1);
 }
 
 #workspaces button.active {
-  color: #1e1e2e;
+  color: rgba(30, 30, 46, 1);
   background-color: @green;
 }
 
 #workspaces button:hover {
   box-shadow: inherit;
   text-shadow: inherit;
-  color: #1e1e2e;
-  background-color: #cdd6f4;
+  color: rgba(30, 30, 46, 1);
+  background-color: rgba(205, 214, 244, 1);
 }
 
 #workspaces button.urgent {
-  background-color: #f38ba8;
+  background-color: rgba(243, 139, 168, 1);
 }
 
 #memory,
@@ -88,8 +85,8 @@ window#waybar.hidden {
   border-radius: 4px;
   margin: 6px 3px;
   padding: 6px 12px;
-  background-color: #1e1e2e;
-  color: #181825;
+  background-color: rgba(30, 30, 46, 1);
+  color: rgba(24, 24, 37, 1);
 }
 
 #custom-power {
@@ -102,15 +99,15 @@ window#waybar.hidden {
   margin-left: 5px;
   font-size: 15px;
   border-radius: 8px 0px 0px 8px;
-  color: #74c7ec;
+  color: rgba(116, 199, 236, 1);
 }
 
 #memory {
-  background-color: #fab387;
+  background-color: rgba(250, 179, 135, 1);
 }
 
 #battery {
-  background-color: #f38ba8;
+  background-color: rgba(243, 139, 168, 1);
 }
 
 #battery.warning,
@@ -121,66 +118,65 @@ window#waybar.hidden {
 }
 
 #battery.charging {
-  background-color: #a6e3a1;
-  color: #181825;
+  background-color: rgba(166, 227, 161, 1);
+  color: rgba(24, 24, 37, 1);
 }
 
 #backlight {
-  background-color: #fab387;
+  background-color: rgba(250, 179, 135, 1);
 }
 
 #wireplumber {
-  background-color: #f9e2af;
+  background-color: rgba(249, 226, 175, 1);
 }
 
 #network {
-  background-color: #94e2d5;
+  background-color: rgba(148, 226, 213, 1);
   padding-right: 17px;
 }
 
 #clock {
   font-family: JetBrainsMono Nerd Font;
-  background-color: #74c7ec;
+  background-color: rgba(116, 199, 236, 1);
 }
 
 #custom-power {
-  background-color: #f2cdcd;
+  background-color: rgba(242, 205, 205, 1);
 }
 
 #language {
-  background-color: #f38ba8; 
-  color: #1e1e2e;    
+  background-color: rgba(243, 139, 168, 1);
+  color: rgba(30, 30, 46, 1);
   border-radius: 8px;
   margin: 6px 3px;
   padding: 6px 12px;
-  font-size: 11px;  
+  font-size: 11px;
 }
 
 tooltip {
   border-radius: 8px;
   padding: 15px;
-  background-color: #181825;
+  background-color: rgba(24, 24, 37, 1);
 }
 
 tooltip label {
   padding: 5px;
-  background-color: #181825;
+  background-color: rgba(24, 24, 37, 1);
 }
 
 #window {
-    font-family: JetBrainsMono Nerd Font, monospace;
-    font-size: 12px;
-    margin: 6px 3px;
-    padding: 6px 12px;
-    background-color: #b4befe;
-    color: #181825; /* Text color (Latte: #4c4f69, Mocha: #cdd6f4) */
-    border: none;
-    min-width: 60px;
-    text-shadow: 0 0 4px rgba(30, 30, 46, 0.6); /* Subtle glow for visibility */
-    }
-   
-    /* make window module transparent when no windows present */
-    window#waybar.empty #window {
-    background-color: transparent;
-   }
+  font-family: JetBrainsMono Nerd Font, monospace;
+  font-size: 12px;
+  margin: 6px 3px;
+  padding: 6px 12px;
+  background-color: rgba(180, 190, 254, 1);
+  color: rgba(24, 24, 37, 1);
+  border: none;
+  min-width: 60px;
+  text-shadow: 0 0 4px rgba(30, 30, 46, 0.6);
+}
 
+/* make window module transparent when no windows present */
+window#waybar.empty #window {
+  background-color: transparent;
+}
