updated wlogout icons

--- a/dot_config/wlogout/style.css
+++ b/dot_config/wlogout/style.css
@@ -27,25 +27,26 @@ button:focus, button:active, button:hover {
 }
 
 #lock {
-    background-image: image(url("/usr/share/wlogout/icons/lock.svg"), url("/usr/local/share/wlogout/icons/lock.svg"));
+    background-image: image(url("./icons/lock.svg"));
 }
 
 #logout {
-    background-image: image(url("/usr/share/wlogout/icons/logout.svg"), url("/usr/local/share/wlogout/icons/logout.svg"));
+    background-image: image(url("./icons/logout.svg"));
 }
 
 #suspend {
-    background-image: image(url("/usr/share/wlogout/icons/suspend.svg"), url("/usr/local/share/wlogout/icons/suspend.svg"));
+    background-image: image(url("./icons/suspend.svg"));
 }
 
 #hibernate {
-    background-image: image(url("/usr/share/wlogout/icons/hibernate.svg"), url("/usr/local/share/wlogout/icons/hibernate.svg"));
+    background-image: image(url("./icons/hibernate.svg"));
 }
 
 #shutdown {
-    background-image: image(url("/usr/share/wlogout/icons/shutdown.svg"), url("/usr/local/share/wlogout/icons/shutdown.svg"));
+    background-image: image(url("./icons/shutdown.svg"));
 }
 
 #reboot {
-    background-image: image(url("/usr/share/wlogout/icons/reboot.svg"), url("/usr/local/share/wlogout/icons/reboot.svg"));
+    background-image: image(url("./icons/reboot.svg"));
 }
+
