added niri modules on waybar

--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -45,6 +45,8 @@ window#waybar.hidden {
 
 #workspaces {
   background-color: transparent;
+  margin-right: 4px;
+  margin-left: 14px;
 }
 
 #workspaces button {
