--- a/dot_config/waybar-niri/style.css
+++ b/dot_config/waybar-niri/style.css
@@ -45,6 +45,8 @@ window#waybar.hidden {
 
 #workspaces {
   background-color: transparent;
+  margin-right: 4px;
+  margin-left: 4px;
  }
 
 #workspaces button {
