--- a/dot_config/waybar-niri/style.css
+++ b/dot_config/waybar-niri/style.css
@@ -27,7 +27,7 @@
 
 * {
   border: 0;
-  border-radius: 10;
+  border-radius: 10px;
   min-height: 0;
   font-family: JetBrainsMono Nerd Font;
   font-size: 12px;
