--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -21,7 +21,7 @@
 @define-color surface2 rgba(88, 91, 112, 1);
 @define-color surface1 rgba(69, 71, 90, 1);
 @define-color surface0 rgba(49, 50, 68, 1);
-@define-color base rgba(30, 30, 46, 1);
+@define-color base rgba(30, 30, 46, 0.85);
 @define-color mantle rgba(24, 24, 37, 1);
 @define-color crust rgba(17, 17, 27, 1);
 
@@ -30,11 +30,12 @@
   border-radius: 10px;
   min-height: 0;
   font-family: JetBrainsMono Nerd Font;
-  font-size: 12px;
+  font-size: 13px;
 }
 
 window#waybar {
-  background-color: rgba(30, 30, 46, 0.85); /* subtle transparency */
+  color: @mauve;
+  background-color: @base;
   transition-property: background-color;
   transition-duration: 0.5s;
 }
@@ -44,36 +45,38 @@ window#waybar.hidden {
 }
 
 #workspaces {
-  background-color: transparent;
-  margin-right: 4px;
-  margin-left: 4px;
+  background: transparent;
+  margin-left: 6px;
+  margin-right: 6px;
+  padding: 3px 6px;
+  font-size: 13px;
 }
 
 #workspaces button {
-  all: initial;
-  min-width: 0;
-  box-shadow: inset 0 -3px transparent;
-  padding: 6px 18px;
-  margin: 6px 3px;
+  all: unset;
+  min-width: 0px;
+  min-width: 10px;
+  padding: 3px 12px;
+  margin: 3px 4px;
   border-radius: 4px;
-  background-color: rgba(49, 50, 68, 0.85);
-  color: rgba(205, 214, 244, 1);
+  border: none;
+  color: @text;
+  background-color: transparent;
 }
 
 #workspaces button.active {
-  color: rgba(30, 30, 46, 1);
-  background-color: rgba(166, 227, 161, 0.9);
+  color: @base;
+  background: @green;
 }
 
 #workspaces button:hover {
-  box-shadow: inherit;
-  text-shadow: inherit;
-  color: rgba(30, 30, 46, 1);
-  background-color: rgba(205, 214, 244, 0.9);
+  color: @text;
+  background: transparent;
 }
 
 #workspaces button.urgent {
-  background-color: rgba(243, 139, 168, 0.9);
+  color: @red;
+  background-color: transparent;
 }
 
 #memory,
@@ -90,121 +93,130 @@ window#waybar.hidden {
 #language,
 #window {
   border-radius: 4px;
-  margin: 6px 3px;
+  margin: 3px 3px;
   padding: 6px 12px;
-  background-color: rgba(30, 30, 46, 0.85);
-  color: rgba(24, 24, 37, 1);
-}
-
-#custom-power {
-  margin-right: 10px;
-  margin: 6px 3px;
-  padding: 6px 12px;
+  color: @text;
+  background: transparent;
 }
 
 #custom-logo {
-  padding-right: 7px;
-  padding-left: 7px;
-  margin-left: 5px;
+  padding: 3px 6px;
   font-size: 15px;
-  border-radius: 8px 0px 0px 8px;
-  color: rgba(116, 199, 236, 1);
+  border-radius: 8px 8px 8px 8px;
+  color: @sapphire;
   background-color: transparent;
 }
 
 #cpu {
-  background-color: rgba(203, 166, 247, 0.9); /* mauve */
-  color: rgba(30, 30, 46, 1);
+  background-color: transparent;
+  color: @mauve;
   margin: 6px 3px;
-  padding: 6px 12px;
+  padding: 3px 12px;
   border-radius: 4px;
   transition: background-color 0.3s ease-in-out;
   font-weight: bold;
 }
 
 #temperature {
-  background-color: rgba(243, 139, 168, 0.9); /* red */
-  color: rgba(30, 30, 46, 1);
+  background-color: transparent;
+  color: @red;
   margin: 6px 3px;
-  padding: 6px 12px;
+  padding: 3px 12px;
   border-radius: 4px;
+  font-weight: bold;
   transition: background-color 0.3s ease-in-out;
 }
 
 #temperature.critical {
-  background-color: rgba(235, 160, 172, 0.95); /* maroon for critical temps */
-  color: rgba(249, 226, 175, 1);
+  background-color: transparent; /* maroon for critical temps */
+  color: @maroon;
   margin: 6px 3px;
-  padding: 6px 12px;
+  padding: 3px 12px;
 }
 
 #memory {
-  background-color: rgba(250, 179, 135, 0.9);
+  color: @peach;
+  background-color: transparent;
   margin: 6px 3px;
-  padding: 6px 12px;
+  padding: 3px 12px;
 }
 
 #battery {
-  background-color: rgba(243, 139, 168, 0.9);
+  color: @red;
+  background-color: transparent;
   margin: 6px 3px;
-  padding: 6px 12px;
+  padding: 3px 12px;
 }
 
 #battery.warning,
 #battery.critical,
 #battery.urgent {
-  background-color: rgba(243, 139, 168, 0.95);
-  color: rgba(249, 226, 175, 1);
+  background-color: @red;
+  color: @yellow; 
   margin: 6px 3px;
-  padding: 6px 12px;
+  padding: 3px 12px;
 }
 
 #battery.charging {
-  background-color: rgba(166, 227, 161, 0.9);
-  color: rgba(24, 24, 37, 1);
+  background-color: transparent;
+  color: @green; 
   margin: 6px 3px;
-  padding: 6px 12px;
+  padding: 3px 12px;
 }
 
 #backlight {
-  background-color: rgba(250, 179, 135, 0.9);
+  background-color: transparent;
+  color: @peach;
   margin: 6px 3px;
-  padding: 6px 12px;
+  padding: 3px 12px;
 }
 
 #wireplumber {
-  background-color: rgba(249, 226, 175, 0.9);
+  background-color: transparent;
+  color: @yellow;
+  font-size: 12px;
   margin: 6px 3px;
-  padding: 6px 12px;
+  padding: 3px 12px;
 }
 
 #network {
-  background-color: rgba(148, 226, 213, 0.9);
-  padding-right: 17px;
+  background-color: transparent;
+  color: @teal;
   font-size: 12px;
   font-weight: bold;
   margin: 6px 3px;
-  padding: 6px 12px;
+  padding: 3px 12px;
 }
+
+#network.speed {
+  background-color: transparent;
+  color: @teal;
+  }
 
 #clock {
   font-family: JetBrainsMono Nerd Font;
-  background-color: rgba(116, 199, 236, 0.9);
+  font-weight: bold;
+  font-size: 12px;
+  background-color: transparent;   
+  color: rgba(116, 199, 236, 0.9);
   margin: 6px 3px;
-  padding: 6px 12px;
+  padding: 3px 12px;
 }
 
 #custom-power {
-  background-color: rgba(242, 205, 205, 0.9);
+  background-color: transparent; 
+  color: @flamingo;
+  font-size: 15px;
+  font-weight: bold;
   margin: 6px 3px;
-  padding: 6px 12px;
+  padding: 3px 12px;
 }
 
 #language {
-  background-color: rgba(137, 180, 250, 0.9); 
-  color: rgba(30, 30, 46, 1);
+  background-color: transparent; 
+  color: @blue;
   margin: 6px 3px;
-  padding: 6px 12px;
+  padding: 3px 12px;
   font-size: 12px;
   font-weight: bold;
 }
@@ -223,13 +235,13 @@ tooltip label {
 #window {
   font-family: JetBrainsMono Nerd Font, monospace;
   font-size: 12px;
+  font-weight: bold;
   margin: 6px 3px;
-  padding: 6px 12px;
-  background-color: rgba(180, 190, 254, 0.9);
-  color: rgba(24, 24, 37, 1);
+  padding: 3px 12px;
+  background-color: transparent;
+  color: @mauve;
   border: none;
-  min-width: 60px;
-  text-shadow: 0 0 4px rgba(30, 30, 46, 0.6);
+  min-width: 30px;
 }
 
 /* make window module transparent when no windows present */
