--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -22,20 +22,20 @@
 @define-color surface1 rgba(69, 71, 90, 1);
 @define-color surface0 rgba(49, 50, 68, 1);
 @define-color base rgba(30, 30, 46, 0.85);
-@define-color mantle rgba(24, 24, 37, 1);
+@define-color mantle rgba(24, 24, 37, 0.85);
 @define-color crust rgba(17, 17, 27, 1);
 
 * {
   border: 0;
   border-radius: 10px;
-  min-height: 0;
+  min-height: 0px;
   font-family: JetBrainsMono Nerd Font;
-  font-size: 13px;
+  font-size: 14px;
 }
 
 window#waybar {
   color: @mauve;
-  background-color: @base;
+  background-color: transparent;
   transition-property: background-color;
   transition-duration: 0.5s;
 }
@@ -46,26 +46,24 @@ window#waybar.hidden {
 
 #workspaces {
   background: transparent;
-  margin-left: 6px;
-  margin-right: 6px;
-  padding: 3px 6px;
-  font-size: 13px;
+  padding: 0px 0px;
+  font-size: 15px;
 }
 
 #workspaces button {
   all: unset;
   min-width: 0px;
   min-width: 10px;
-  padding: 3px 12px;
   margin: 3px 4px;
+  padding: 3px 12px;
   border-radius: 4px;
   border: none;
   color: @text;
-  background-color: transparent;
+  background-color: @mantle;
 }
 
 #workspaces button.active {
-  color: @base;
+  color: @mantle;
   background: @green;
 }
 
@@ -75,7 +73,7 @@ window#waybar.hidden {
 }
 
 #workspaces button.urgent {
-  color: @base;
+  color: @mantle;
   background-color: @red;
 }
 
@@ -93,58 +91,57 @@ window#waybar.hidden {
 #language,
 #window {
   border-radius: 4px;
-  margin: 3px 3px;
+  margin: 3px 4px;
   padding: 6px 12px;
   color: @text;
-  background: transparent;
+  background: @mantle;
 }
 
 #custom-logo {
-  padding: 3px 6px;
+  margin: 1px 4px;
+  padding: 3px 3px;
   font-size: 15px;
   border-radius: 8px 8px 8px 8px;
   color: @sapphire;
-  background-color: transparent;
+  background-color: @mantle;
 }
 
 #cpu {
-  background-color: transparent;
+  background-color: @mantle;
   color: @mauve;
-  margin: 6px 3px;
+  margin: 3px 4px;
   padding: 3px 12px;
   border-radius: 4px;
   transition: background-color 0.3s ease-in-out;
-  font-weight: bold;
 }
 
 #temperature {
-  background-color: transparent;
+  background-color: @mantle;
   color: @red;
-  margin: 6px 3px;
+  margin: 3px 4px;
   padding: 3px 12px;
   border-radius: 4px;
-  font-weight: bold;
   transition: background-color 0.3s ease-in-out;
 }
 
 #temperature.critical {
-  background-color: transparent; /* maroon for critical temps */
+  background-color: @mantle; /* maroon for critical temps */
   color: @maroon;
-  margin: 6px 3px;
+  margin: 3px 4px;
   padding: 3px 12px;
 }
 
 #memory {
   color: @peach;
-  background-color: transparent;
-  margin: 6px 3px;
+  background-color: @mantle;
+  margin: 3px 4px;
   padding: 3px 12px;
 }
 
 #battery {
   color: @red;
-  background-color: transparent;
-  margin: 6px 3px;
+  background-color: @mantle;
+  margin: 3px 4px;
   padding: 3px 12px;
 }
 
@@ -153,72 +150,70 @@ window#waybar.hidden {
 #battery.urgent {
   background-color: @red;
   color: @yellow; 
-  margin: 6px 3px;
+  margin: 3px 4px;
   padding: 3px 12px;
 }
 
 #battery.charging {
-  background-color: transparent;
+  background-color: @mantle;
   color: @green; 
-  margin: 6px 3px;
+  margin: 3px 4px;
   padding: 3px 12px;
 }
 
 #backlight {
-  background-color: transparent;
+  background-color: @mantle;
   color: @peach;
-  margin: 6px 3px;
+  margin: 3px 4px;
   padding: 3px 12px;
 }
 
 #wireplumber {
-  background-color: transparent;
+  background-color: @mantle;
   color: @yellow;
-  font-size: 12px;
-  margin: 6px 3px;
+  font-size: 15px;
+  margin: 3px 4px;
   padding: 3px 12px;
 }
 
 #network {
-  background-color: transparent;
+  background-color: @mantle;
   color: @teal;
-  font-size: 12px;
-  font-weight: bold;
-  margin: 6px 3px;
+  font-size: 15px;
+  margin: 3px 4px;
   padding: 3px 12px;
 }
 
 #network.speed {
-  background-color: transparent;
+  background-color: @mantle;
   color: @teal;
+  font-size: 15px;
   }
 
 #clock {
   font-family: JetBrainsMono Nerd Font;
-  font-weight: bold;
-  font-size: 12px;
-  background-color: transparent;   
+  font-size: 15px;
+  background-color: @mantle;   
   color: rgba(116, 199, 236, 0.9);
-  margin: 6px 3px;
+  margin: 3px 4px;
   padding: 3px 12px;
 }
 
 #custom-power {
-  background-color: transparent; 
+  background-color: @mantle; 
   color: @flamingo;
   font-size: 15px;
-  font-weight: bold;
-  margin: 6px 3px;
+  border-radius: 4px;
+  margin: 3px 4px;
   padding: 3px 12px;
 }
 
 #language {
-  background-color: transparent; 
+  background-color: @mantle; 
   color: @blue;
-  margin: 6px 3px;
+  margin: 3px 4px;
   padding: 3px 12px;
-  font-size: 12px;
-  font-weight: bold;
+  font-size: 15px;
 }
 
 tooltip {
@@ -234,17 +229,16 @@ tooltip label {
 
 #window {
   font-family: JetBrainsMono Nerd Font, monospace;
-  font-size: 12px;
-  font-weight: bold;
-  margin: 6px 3px;
+  font-size: 15px;
+  margin: 3px 4px;
   padding: 3px 12px;
-  background-color: transparent;
+  background-color: @mantle;
   color: @mauve;
   border: none;
   min-width: 30px;
 }
 
-/* make window module transparent when no windows present */
+/* make window module @mantle when no windows present */
 window#waybar.empty #window {
   background-color: transparent;
 }
